# blackwood

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
data/: DXY.csv  EEM.csv  GC_Gold.csv  HYG.csv  TLT.csv  US100.csv  US30.csv  US500.csv
docs/: RANKING_AND_STABILITY.md
examples/: buy_hold.ipynb
portfolio/equities/: DXY_equity.csv  EEM_equity.csv  GC_Gold_equity.csv  HYG_equity.csv  TLT_equity.csv  US100_equity.csv  US30_equity.csv  US500_equity.csv
src/: config.py
src/blackwood/: __init__.py  config.py  typing.py
src/blackwood/data/: bootstrap.py  loaders.py  splitters.py
src/blackwood/evaluation/: analyzers.py  monte_carlo.py  robustness.py  utils.py
src/blackwood/indicators/: core.py  cycle.py  zigzag_pure.py  zone.py
src/blackwood/meta_labeling/: calibration.py  evaluation.py  feature_selection.py  features.py  models.py  rf_model.py  selection.py  utils.py
src/blackwood/metrics/: core.py
src/blackwood/optimization/: cross_validation.py  optimization.py  walk_forward.py
src/blackwood/portfolio/: analyzer.py  core.py  data.py  denoising.py  optimizer.py  risk_allocator.py  risk_model_pilot.py  risk_models.py  utils.py  visualization.py
src/blackwood/portfolio/tests/: test_risk_allocator.py  test_risk_models.py
src/blackwood/presets/: instruments.py
src/blackwood/regime/: analysis.py  features.py  models.py  pipeline.py
src/blackwood/robustness/: __init__.py  parameter_stability.py  ranking_display.py  stability_pipeline.py
src/blackwood/strategies/: base.py  tools.py  wyckoff.py
src/blackwood/utils/: benchmark.py  information_theory.py
src/blackwood/visualization/: core.py  regime.py  style.py  tests.py
src/data/: bootstrap.py  loaders.py  splitters.py
src/evaluation/: analyzers.py  monte_carlo.py  robustness.py  utils.py
src/indicators/: core.py  cycle.py  zigzag_pure.py  zone.py
src/meta_labeling/: calibration.py  evaluation.py  feature_selection.py  features.py  models.py  rf_model.py  selection.py  utils.py
src/optimization/: cross_validation.py  optimization.py  walk_forward.py
src/portfolio/: analyzer.py  core.py  data.py  denoising.py  optimizer.py  risk_allocator.py  risk_model_pilot.py  risk_models.py  utils.py  visualization.py
src/portfolio/tests/: test_optimizer_risk_model_support.py  test_risk_allocator.py  test_risk_models.py
src/regime/: analysis.py  features.py  models.py  pipeline.py
src/robustness/: __init__.py  parameter_stability.py  ranking_display.py  stability_pipeline.py
src/strategies/: tools.py  wyckoff.py
src/utils/: benchmark.py  debug.py  information_theory.py
src/visualization/: core.py  regime.py  style.py  tests.py
tests/: test_optimizer_risk_model_support.py  test_risk_allocator.py  test_risk_models.py
